--- a/src/Demo.AspNetCore.EF6.Trackable.Client/Demo.AspNetCore.EF6.Trackable.Client.csproj
+++ b/src/Demo.AspNetCore.EF6.Trackable.Client/Demo.AspNetCore.EF6.Trackable.Client.csproj
@@ -60,8 +60,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="INorthwindServiceAgent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NorthwindServiceAgent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
